# SupergoonEngine

./: .gitattributes  .gitignore  CMakeLists.txt  Class1.cs  README.md  SgEngine - Backup.csproj  SgEngine.csproj
Collision/: Collision.cs
Components/: Component.cs  ComponentTypes.cs  SpriteComponent.cs  TweeningComponent.cs
Core/: ContentLoader.cs  ExtendedGame.cs  FontSheet.cs  ResolutionHelper.cs  SingleFunctionTimer.cs  Sound.cs  Spritesheet.cs  Timer.cs  TweenTimer.cs
Core/Camera/: Camera.cs
Core/Input/: Controller.cs  InputSg.cs  PlayerController.cs
Core/Sounds/: Introloop.cs  Sound.cs  SoundFile.cs  SoundSystem.cs
EKS/: GameLevel.cs  GameObject.cs  GameObjectList.cs  GameWorld.cs  Level.cs
GUI/: Canvas.cs  Gui.cs  GuiUiComponent.cs  GuiUiImage.cs  Panel.cs
GUI/Components/: GuiComponent.cs  GuiImageComponent.cs  GuiInputComponent.cs  GuiTextComponent.cs  GuiUiImageComponent.cs  GuiUiInputComponent.cs
GUI/Types/: Canvas.cs  GuiButton.cs  GuiButtonController.cs  GuiImage.cs  Panel.cs
GUI/Utils/: GuiBorder.cs
Interfaces/: IPlaySfx.cs  IState.cs  IUpdate.cs
Interfaces/EKS/: IDraw.cs  IFullEksObject.cs  IHandleInput.cs  IHandlePlayerInput.cs  IState.cs  IUpdate.cs
Interfaces/Input/: IHandlePlayerInput.cs
Interfaces/SgDebug/: ISendDebugMessage.cs
Interfaces/Sound/: IPlayMusic.cs  IPlaySfx.cs
Models/: BankModel.cs  BaseConfig.cs  Introloop.cs
Models/Ui/: UiScreenModel.cs
SgDebug/: DebugCommands.cs  SgDebug.cs  SgDebugPanel.cs
SgJson/: GameJsonLoader.cs
SgJson/Parsing/: UiParser.cs
State/: StateMachine.cs
UI/: Canvas.cs  Panel.cs  UI.cs  UIComponent.cs  UiImage.cs
UI/Components/: UiImageComponent.cs  UiInputComponent.cs
Utils/: Helpers.cs  Utils.cs
include/Supergoon/: audio.h  camera.h  clock.h  effects.h  engine.h  events.h  filesystem.h  gameobject.h  graphics.h  json.h  log.h  lua.h  map.h  pch.h  pch.hpp  sprite.h  state.h  text.h  tools.h  ui.h  window.h
include/Supergoon/Animation/: animationdata.h  animator.h
include/Supergoon/Audio/: Audio.h  Sfx.h  Stream.h
include/Supergoon/Bindings/: engine.hpp
include/Supergoon/Debug/: Audio.hpp  Collision.hpp  Console.hpp  Debug.hpp  Game.hpp  GameObject.hpp  Graphics.hpp  ImGui.hpp  Scene.hpp  Tween.hpp  UI.hpp
include/Supergoon/Graphics/: graphics.h  shader.h  texture.h
include/Supergoon/Imgui/: imgui.h  imgui_impl_sdlrenderer3.h
include/Supergoon/Input/: joystick.h  keyboard.h  mouse.h  touch.h
include/Supergoon/Lua/: animation.h  camera.h  graphics.h  log.h  scene.h  scripting.h  tui.h
include/Supergoon/Platform/: cursesInput.h  cursesWindow.h
include/Supergoon/Platform/openal/: openalSfx.h  openalStream.h
include/Supergoon/Platform/opengl/: openglGraphics.h  openglTexture.h
include/Supergoon/Platform/sdl/: sdl.h  sdlAudio.h  sdlInput.h  sdlWindow.h  sdlbgm.h
include/Supergoon/Primitives/: Color.h  Point.h  rectangle.h
include/Supergoon/Tweening/: tween.h
include/Supergoon/UI/: ui.h  uiImageAnimation.h  uiProgressBar.h  uibutton.h  uiimage.h  uilayoutgroup.h  uiobject.h  uirect.h  uitext.h
include/SupergoonEngine/: audio.h  camera.h  gameobject.h  graphics.h  map.h  sprite.h  tools.h  tween.h  ui.h  window.h
include/SupergoonEngine/Animation/: animationdata.h  animator.h
include/SupergoonEngine/Lua/: audio.h  effects.h  engine.h  input.h  object.h  sprite.h  ui.h
include/SupergoonEngine/Platform/: cursesInput.h  cursesWindow.h  sdlInput.h
include/SupergoonEngine/Platform/miniaudio/: miniaudioBgm.h
include/SupergoonEngine/Platform/openal/: openal.h  openalBgm.h
include/SupergoonEngine/Platform/sdl/: sdlWindow.h
include/SupergoonEngine/TUI/: panel.h  text.h  textbox.h
include/glad/: glad.h
old/: Engine.lua
scripting/: Engine.lua  GameObject.lua  Scheduler.lua  TUI.lua  Tools.lua  UI.lua
src/: camera.c  clock.c  easing.c  effects.c  engine.c  events.c  filesystem.c  gameobject.c  graphics.c  json.c  log.c  lua.c  map.c  map.c.html  sprite.c  state.c  text.c  tools.c  window.c
src/Animation/: AnimationData.c  Animator.c
src/Audio/: Audio.c  Bgm.c  Sfx.c  Stream.c
src/Debug/: Audio.cpp  Collision.cpp  Console.cpp  Debug.cpp  Game.cpp  GameObject.cpp  Graphics.cpp  ImGui.cpp  Performance.cpp  Scene.cpp  Tween.cpp  UI.cpp
src/Graphics/: graphics.c  shader.c  texture.c
src/Imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdlrenderer3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/Input/: joystick.c  keyboard.c  mouse.c  touch.c
src/Lua/: audio.c  lanimation.c  laudio.c  lcamera.c  leffects.c  lengine.c  lgameobject.c  lgraphics.c  linput.c  log.c  lscene.c  lsprite.c  ltext.c  ltui.c  lui.c  object.c  scripting.c  ui.c
src/Platform/: cursesInput.c  cursesWindow.c  sdlInput.c
src/Platform/miniaudio/: miniaudio.c
src/Platform/openal/: openal.c  openalBgm.c  openalSfx.c  openalStream.c
src/Platform/opengl/: .openglTexture.c.swo  glad.c  openglGraphics.c  openglShader.c  openglTexture.c
src/Platform/sdl/: sdl.c  sdlAudio.c  sdlBgm.c  sdlInput.c  sdlWindow.c
src/Primitives/: rectangle.c
src/TUI/: panel.c  text.c  textbox.c
src/Tweening/: easing.c  tween.c
src/UI/: ui.c  uiImageAnimation.c  uiProgressBar.c  uibutton.c  uiimage.c  uiobject.c  uirect.c  uitext.c
src/bindings/: engine.cpp
